--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+implementation 'com.squareup.retrofit2:retrofit:2.6.4'
+implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
+
 plugins {
     id 'com.android.application'
 }
