--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
 
@@ -50,6 +52,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation ('io.socket:socket.io-client:2.0.0') {
         // excluding org.json which is provided by Android
