kakao login api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.project2">
 
-    <uses-sdk tools:overrideLibrary="com.kakao.sdk:v2-user:2.0.1" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -24,9 +22,6 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".Login"
-            android:exported="false"></activity>
-        <activity
             android:name=".PlayingMusic"
             android:exported="false" />
         <activity
@@ -40,20 +35,24 @@
             android:usesCleartextTraffic="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-
-                <!--Redirect URI: "kakao{NATIVE_APP_KEY}://oauth"-->
-                <data
-                    android:host="oauth"
-                    android:scheme="66c73d1ffb687ec245df9b96fff1b887"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="66c73d1ffb687ec245df9b96fff1b887" />
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Redirect URI: "kakao{NATIVE_APP_KEY}://oauth" -->
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao66c73d1ffb687ec245df9b96fff1b887" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
