--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,7 @@ dependencies {
 
     implementation "com.kakao.sdk:v2-all:2.11.0"
 
-    implementation "com.kakao.sdk:v2-user:2.9.0" // 카카오 로그인
-    implementation "com.kakao.sdk:v2-talk:2.9.0" // 친구, 메시지(카카오톡)
-    implementation "com.kakao.sdk:v2-story:2.9.0" // 카카오스토리
-    implementation "com.kakao.sdk:v2-link:2.9.0" // 메시지(카카오링크)
-    implementation "com.kakao.sdk:v2-navi:2.9.0" // 카카오내비
+    implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.5'
 
     implementation 'com.kakao.sdk:usermgmt:1.27.0'
 
