--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
+    //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -69,5 +70,4 @@ dependencies {
     implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.5'
 
     implementation 'com.kakao.sdk:usermgmt:1.27.0'
-
 }
