--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".LikeListActivity"
+            android:exported="false"/>
+        <activity
             android:name=".MyprofileActivity"
             android:exported="false"/>
         <activity
