--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.5'
 
     implementation 'com.kakao.sdk:usermgmt:1.27.0'
+
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
 }
